rust/geometry/tests/snapshots/annex_e__advanced__bath-csg-solid_780.snap
---
source: rust/geometry/tests/geometry_correctness_harness.rs
description: tests/models/buildingsmart/annex_e/advanced-geometric-shape/bath-csg-solid.ifc
---
parse_ok: true
products_attempted: 2
products_non_empty: 1
process_errors: 1
total_triangles: 152
total_vertices: 208
spike_triangles: 0
total_surface_area: 10.797
bbox_min: [0.000, 0.000, 0.000]
bbox_max: [2.000, 0.800, 0.800]
types_seen:
  IFCSANITARYTERMINAL: 1
